SyntaxAnalyzer.py
# Used to exit program gracefully 
import time
import sys

from syntax_rules import *

# define separators, operators and reserved words
separator = [' ', '\t', ',', ';', '(', ')', '{', '}', '#']
operators = ['+', '-', '*', '/', '=', '<', '>', '<=', '=>', '==', '!=', '!']
keyword = ['if', 'else', 'endif' ,'while', 'function', 'integer', 'bool', 'real', 'ret', 'put', 'get', 'true', 'false']
begin_comment = '[*'
end_comment = '*]'

# define array to store all the words that have been read
words = []

# define dictionary to store tokens
tokens = []

# define current line
current_line = 1

# variables for parser
current_token = None
token_index = 0

# variables for output file
output_file = None

switch = False

# *********************************************************************************************************************************
# ******************************SYNTAX ANALYZER CODE STARTS HERE*******************************************************************
# *********************************************************************************************************************************
"""All the rules and functions for the syntax analyzer are here for top down parsing"""
def exit_syntax_analyzer():
    print("\nExiting Syntax Analyzer...")
    time.sleep(2)
    print("\nSyntax Analyzer Exited.")
    sys.exit(1)

def change_switch():
    global switch
    if switch == False:
        switch = True
    else:
        switch = False

def get_next_token():
    global current_token, token_index
    if token_index < len(tokens):
        current_token = tokens[token_index]
        token_index += 1

def print_token():
    global current_token,  output_file
    if current_token['token'] == 'illegal' or current_token['token'] == 'keyword' or current_token['token'] == 'integer' or current_token['token'] == 'real':
        print(f"{current_token['token']}\t\t\t{current_token['lexeme']}")
        with open(output_file, "a") as file:
            file.write(f"{current_token['token']}\t\t\t{current_token['lexeme']}\n")
    else:
        print(f"{current_token['token']}\t\t{current_token['lexeme']}")
        with open(output_file, "a") as file:
            file.write(f"{current_token['token']}\t\t{current_token['lexeme']}\n")

# Rule 1
# R1) <Rat23F> ::= <Opt Function Definitions> # <Opt Declaration List> <Statement List> #
def Rat23F():
    global current_token, switch, output_file
    get_next_token()
    print_token()
    # print rule
    if switch == False:
        print("\t<Rat23F> ::= <Opt Function Definitions> # <Opt Declaration List> <Statement List> #")
        with open(output_file, "a") as file:
            file.write("\t<Rat23F> ::= <Opt Function Definitions> # <Opt Declaration List> <Statement List> #\n")
    # call first function
    OptFunctionDefinitions()
    if current_token['lexeme'] == '#':
        get_next_token()
        print_token()
        OptDeclarationList()
        StatementList()
        if current_token['lexeme'] == '#':
            get_next_token()
            print_token()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected '#' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected '#' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else: 
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected '#' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected '#' at line {current_token['line']}.\n")
        exit_syntax_analyzer()

# Rule 2
# R2) <Opt Function Definitions> ::= <Function Definitions> | <Empty>
def OptFunctionDefinitions():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>\n")
    FunctionDefinitions()
    Empty()


# Rule 3
# R3) <Function Definitions> ::= <Function> <Function Definitions Prime>
def FunctionDefinitions():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Function Definitions> ::= <Function> <Function Definitions Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Function Definitions> ::= <Function> <Function Definitions Prime>\n")
    Function()
    FunctionDefinitionsPrime()


# Rule 4
# R4) <Function Definitions Prime> ::= epsilon | <Function Definitions>
def FunctionDefinitionsPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Function Definitions Prime> ::= epsilon | <Function Definitions>")
        with open(output_file, "a") as file:
            file.write("\t<Function Definitions Prime> ::= epsilon | <Function Definitions>\n")
    Empty()
    FunctionDefinitions()

#Rule 5
# R5) <Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>
def Function():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>")
        with open(output_file, "a") as file:
            file.write("\t<Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>\n")
    if current_token['lexeme'] == 'function':
        get_next_token()
        print_token()
        if current_token['token'] == 'identifier':
            get_next_token()
            print_token()
            if current_token['lexeme'] == '(':
                get_next_token()
                print_token()
                OptParameterList()
                if current_token['lexeme'] == ')':
                    get_next_token()
                    print_token()
                    OptDeclarationList()
                    Body()
                else:
                    print(f"Reading token: {print_token()}")
                    print(f"Error: Expected ')' at line {current_token['line']}.")
                    with open(output_file, "a") as file:
                        file.write(f"Reading token: {print_token()}\n")
                        file.write(f"Error: Expected ')' at line {current_token['line']}.\n")
                    exit_syntax_analyzer()
            else:
                print(f"Reading token: {print_token()}")
                print(f"Error: Expected '(' at line {current_token['line']}.")
                with open(output_file, "a") as file:
                    file.write(f"Reading token: {print_token()}\n")
                    file.write(f"Error: Expected '(' at line {current_token['line']}.\n")
                exit_syntax_analyzer()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected 'identifier' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'function' keyword at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'function' keyword at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 6
# R6) <Opt Parameter List> ::= <Parameter List> | <Empty>
def OptParameterList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Opt Parameter List> ::= <Parameter List> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Opt Parameter List> ::= <Parameter List> | <Empty>\n")
    ParameterList()
    Empty()


# Rule 7
# R7) <Parameter List> ::= <Parameter> <Parameter List Prime>
def ParameterList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Parameter List> ::= <Parameter> <Parameter List Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Parameter List> ::= <Parameter> <Parameter List Prime>\n")
    Parameter()
    ParameterListPrime()


# Rule 8
# R8) <Parameter List Prime> ::= epsilon | <Parameter List>
def ParameterListPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Parameter List Prime> ::= epsilon | <Parameter List>")
        with open(output_file, "a") as file:
            file.write("\t<Parameter List Prime> ::= epsilon | <Parameter List>\n")
    if current_token['lexeme'] == ',':
        get_next_token()
        print_token()
        ParameterList()
    else:
        Empty()


# Rule 9
# R9) <Parameter> ::= <IDs> <Qualifier>
def Parameter():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Parameter> ::= <IDs> <Qualifier>")
        with open(output_file, "a") as file:
            file.write("\t<Parameter> ::= <IDs> <Qualifier>\n")
    IDs()
    Qualifier()


# Rule 10
# R10) <Qualifier> ::= integer | bool | real
def Qualifier():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Qualifier> ::= integer | bool | real")
        with open(output_file, "a") as file:
            file.write("\t<Qualifier> ::= integer | boolean | real\n")
    if current_token['lexeme'] == 'integer':
        get_next_token()
        print_token()
    elif current_token['lexeme'] == 'bool':
        get_next_token()
        print_token()
    elif current_token['lexeme'] == 'real':
        get_next_token()
        print_token()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'integer', 'bool' or 'real' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'integer', 'bool' or 'real' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 11
# R11) <Body> ::= { <Statement List> }
def Body():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Body> ::= { <Statement List> }")
        with open(output_file, "a") as file:
            file.write("\t<Body> ::= { <Statement List> }\n")
    if current_token['lexeme'] == '{':
        get_next_token()
        print_token()
        StatementList()
        if current_token['lexeme'] == '}':
            get_next_token()
            print_token()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected '}}' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected '}}' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected '{{' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected '{{' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 12
# R12) <Opt Declaration List> ::= <Declaration List> | <Empty>
def OptDeclarationList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Opt Declaration List> ::= <Declaration List> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Opt Declaration List> ::= <Declaration List> | <Empty>\n")
    DeclarationList()
    Empty()


# Rule 13
# R13) <Declaration List> ::= <Declaration> ; <Declaration List Prime>
def DeclarationList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration List> ::= <Declaration> ; <Declaration List Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Declaration List> ::= <Declaration> ; <Declaration List Prime>\n")
    Declaration()
    if current_token['lexeme'] == ';':
        get_next_token()
        print_token()
        DeclarationListPrime()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected ';' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected ';' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 14
# R14) <Declaration List Prime> ::= <Declaration List> | epsilon
def DeclarationListPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration List Prime> ::= <Declaration List> | epsilon")
        with open(output_file, "a") as file:
            file.write("\t<Declaration List Prime> ::= <Declaration List> | epsilon\n")
    DeclarationList()
    Empty()


# Rule 15
# R15) <Declaration> ::= <Qualifier> <IDs>
def Declaration():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration> ::= <Qualifier> <IDs>")
        with open(output_file, "a") as file:
            file.write("\t<Declaration> ::= <Qualifier> <IDs>\n")
    Qualifier()
    IDs()


# Rule 16
# R16) <IDs> ::= <Identifier> <IDs Prime>
def IDs():
    global current_token, switch, output_file
    if switch == False:
        print("\t<IDs> ::= <Identifier> <IDs Prime>")
        with open(output_file, "a") as file:
            file.write("\t<IDs> ::= <Identifier> <IDs Prime>\n")
    if current_token['token'] == 'identifier':
        get_next_token()
        print_token()
        IDsPrime()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'identifier' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 17
# R17) <IDs Prime> ::= , <IDs> | epsilon
def IDsPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<IDs Prime> ::= , <IDs> | epsilon")
        with open(output_file, "a") as file:
            file.write("\t<IDs Prime> ::= , <IDs> | epsilon\n")
    if current_token['lexeme'] == ',':
        get_next_token()
        print_token()
        IDs()
    else:
        Empty()


# Rule 18
# R18) <Statement List> ::= <Statement> <Statement List Prime>
def StatementList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement List> ::= <Statement> <Statement List Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Statement List> ::= <Statement> <Statement List Prime>\n")
    Statement()
    StatementListPrime()


# Rule 19
# R19) <Statement List Prime> ::= <Statement List> | epsilon
def StatementListPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement List Prime> ::= <Statement List> | epsilon")
        with open(output_file, "a") as file:
            file.write("\t<Statement List Prime> ::= <Statement List> | epsilon\n")
    StatementList()
    Empty()


# Rule 20
# R20) <Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>
def Statement():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>")
        with open(output_file, "a") as file:
            file.write("\t<Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>\n")
    Compound()
    Assign()
    If()
    Return()
    Print()
    Scan()
    While()


# Rule 21
# R21) <Compound> ::= { <Statement List> }
def Compound():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Compound> ::= { <Statement List> }")
        with open(output_file, "a") as file:
            file.write("\t<Compound> ::= { <Statement List> }\n")
    if current_token['lexeme'] == '{':
        get_next_token()
        print_token()
        StatementList()
        if current_token['lexeme'] == '}':
            get_next_token()
            print_token()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected '}}' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected '}}' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected '{{' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected '{{' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 22
# R22) <Assign> ::= <Identifier> = <Expression> ;
def Assign():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Assign> ::= <Identifier> = <Expression> ;")
        with open(output_file, "a") as file:
            file.write("\t<Assign> ::= <Identifier> = <Expression> ;\n")
    if current_token['token'] == 'identifier':
        get_next_token()
        print_token()
        if current_token['lexeme'] == '=':
            get_next_token()
            print_token()
            Expression()
            if current_token['lexeme'] == ';':
                get_next_token()
                print_token()
            else:
                print(f"Reading token: {print_token()}")
                print(f"Error: Expected ';' at line {current_token['line']}.")
                with open(output_file, "a") as file:
                    file.write(f"Reading token: {print_token()}\n")
                    file.write(f"Error: Expected ';' at line {current_token['line']}.\n")
                exit_syntax_analyzer()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected '=' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected '=' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'identifier' at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
        exit_syntax_analyzer()


# Rule 23
# R23) <If> ::= if ( <Condition> ) <Statement> <If Prime>
def If():
    global current_token, switch, output_file
    if switch == False:
        print("\t<If> ::= if ( <Condition> ) <Statement> <If Prime>")
        with open(output_file, "a") as file:
            file.write("\t<If> ::= if ( <Condition> ) <Statement> <If Prime>\n")
    if current_token['lexeme'] == 'if':
        get_next_token()
        print_token()
        if current_token['lexeme'] == '(':
            get_next_token()
            print_token()
            Condition()
            if current_token['lexeme'] == ')':
                get_next_token()
                print_token()
                Statement()
                IfPrime()
            else:
                print(f"Reading token: {print_token()}")
                print(f"Error: Expected ')' at line {current_token['line']}.")
                with open(output_file, "a") as file:
                    file.write(f"Reading token: {print_token()}\n")
                    file.write(f"Error: Expected ')' at line {current_token['line']}.\n")
                exit_syntax_analyzer()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected '(' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected '(' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'if' keyword at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'if' keyword at line {current_token['line']}.\n")
        exit_syntax_analyzer()

# Rule 24
# R24) <If Prime> ::= endif | else <Statement> endif
def IfPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<If Prime> ::= endif | else <Statement> endif")
        with open(output_file, "a") as file:
            file.write("\t<If Prime> ::= endif | else <Statement> endif\n")
    if current_token['lexeme'] == 'endif':
        get_next_token()
        print_token()
    elif current_token['lexeme'] == 'else':
        get_next_token()
        print_token()
        Statement()
        if current_token['lexeme'] == 'endif':
            get_next_token()
            print_token()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected 'endif' keyword at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected 'endif' keyword at line {current_token['line']}.\n")
            exit_syntax_analyzer()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'endif' or 'else' keyword at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'endif' or 'else' keyword at line {current_token['line']}.\n")
        exit_syntax_analyzer()

# Rule 25
# R25) <Return> ::= ret <Return Prime>
def Return():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Return> ::= return <Return Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Return> ::= return <Return Prime>\n")
    if current_token['lexeme'] == 'ret':
        get_next_token()
        print_token()
        ReturnPrime()
    else:
        print(f"Reading token: {print_token()}")
        print(f"Error: Expected 'ret' keyword at line {current_token['line']}.")
        with open(output_file, "a") as file:
            file.write(f"Reading token: {print_token()}\n")
            file.write(f"Error: Expected 'ret' keyword at line {current_token['line']}.\n")
        exit_syntax_analyzer()

# Rule 26
# R26) <Return Prime> ::= ; | <Expression> ;
def ReturnPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Return Prime> ::= ; | <Expression> ;")
        with open(output_file, "a") as file:
            file.write("\t<Return Prime> ::= ; | <Expression> ;\n")
    if current_token['lexeme'] == ';':
        get_next_token()
        print_token()
    else:
        Expression()
        if current_token['lexeme'] == ';':
            get_next_token()
            print_token()
        else:
            print(f"Reading token: {print_token()}")
            print(f"Error: Expected ';' at line {current_token['line']}.")
            with open(output_file, "a") as file:
                file.write(f"Reading token: {print_token()}\n")
                file.write(f"Error: Expected ';' at line {current_token['line']}.\n")
            exit_syntax_analyzer()
